--- a/markez_ahl_alquran/markez_ahl_alquran/PL/AddStudents.resx
+++ b/markez_ahl_alquran/markez_ahl_alquran/PL/AddStudents.resx
@@ -120,69 +120,15 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="FullName.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAQQAAAApCAYAAADTTVdWAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACrSURBVHhe7dRRCQMxAETB+FeVIzIqowJaAuHBacgM7M8K
+        iVBORw0KGgoAAAANSUhEUgAAAQQAAAArCAYAAACehfZdAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACxSURBVHhe7dRRCQMxAETB+FeVIzIqowJaAuHBacgM7M8K
         eAPgZa31mXP+zOzO7QacHIyxD+BeuwEnB4IAtxMEIIIARBCACAIQQQAiCEAEAYggABEEIIIARBCACAIQ
         QQAiCEAEAYggABEEIIIARBCACAIQQQAiCEAEAYggABEEIIIARBCACAIQQQAiCEAEAYggABEEIIIARBCA
-        vILwPM93H2Z253YDTg4AtjH+Bevv8eFYVLAAAAAASUVORK5CYII=
+        CAIQQQDyCsLzPN99mNmd2w04OQDYxvgDP1H1ZQKVELcAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="bunifuLabel1.BaseStylesheet" xml:space="preserve">
-    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 12pt; width: 100%; height: 100%; font-style: normal; font-weight: bold; text-decoration: none; color: rgb(0, 0, 0); text-align: center; direction: rtl; }</value>
-  </data>
-  <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAvAAAAIRCAYAAAAsvoldAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAsZSURBVHhe7drBCYNQFAVR+6/n95fgQkhIAbkD54Dos4JZ
-        3AsAAAg657zu5/Pb7Xa73W632+12//8GAABivmJe2QMAwDYBDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAA
-        VQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBAB
-        DwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEA
-        gBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgx
-        oQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYA
-        AAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2
-        aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIe
-        AAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAA
-        VQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBAB
-        DwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEA
-        gBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgx
-        oQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYA
-        AAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2
-        aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIe
-        AAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAA
-        VQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBAB
-        DwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEA
-        gBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgx
-        oQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYA
-        AAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2
-        aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIe
-        AAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAA
-        VQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBAB
-        DwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEA
-        gBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgx
-        oQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYA
-        AAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2
-        aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIe
-        AAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAA
-        VQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBAB
-        DwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEA
-        gBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgx
-        oQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYA
-        AAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2
-        aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIe
-        AAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAA
-        VQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBAB
-        DwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEA
-        gBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgx
-        oQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYA
-        AAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2
-        aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIe
-        AAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAA
-        VQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBAB
-        DwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEA
-        gBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgxoQEAgBABDwAAVQIeAAC2aXYAAAgx
-        oQEAgBABDwAAVQIeAAC2aXYAAAj5Cfj7x/Pz+Xa73W632+12u90b9/0GAABSrusN74omlpu7zrsAAAAA
-        SUVORK5CYII=
-</value>
+    <value>#bunifu-label { padding: 0px; font-family: 'Arial'; font-size: 18pt; width: 100%; height: 100%; font-style: normal; font-weight: bold; text-decoration: none; color: rgb(0, 0, 0); text-align: center; direction: rtl; }</value>
   </data>
   <data name="btnCancel.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -203,7 +149,7 @@
 </value>
   </data>
   <data name="bunifuLabel5.BaseStylesheet" xml:space="preserve">
-    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 9pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: right; direction: rtl; }</value>
+    <value>#bunifu-label { padding: 0px; font-family: 'Arial'; font-size: 12pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: right; direction: rtl; }</value>
   </data>
   <data name="JoinDate.Icon" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -219,7 +165,7 @@
 </value>
   </data>
   <data name="bunifuLabel4.BaseStylesheet" xml:space="preserve">
-    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 9pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: right; direction: rtl; }</value>
+    <value>#bunifu-label { padding: 0px; font-family: 'Arial'; font-size: 12pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: right; direction: rtl; }</value>
   </data>
   <data name="Age.Icon" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -235,9 +181,24 @@
 </value>
   </data>
   <data name="bunifuLabel3.BaseStylesheet" xml:space="preserve">
-    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 9pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: right; direction: rtl; }</value>
+    <value>#bunifu-label { padding: 0px; font-family: 'Arial'; font-size: 12pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: right; direction: rtl; }</value>
   </data>
   <data name="bunifuLabel2.BaseStylesheet" xml:space="preserve">
-    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 9pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: right; direction: rtl; }</value>
+    <value>#bunifu-label { padding: 0px; font-family: 'Arial'; font-size: 12pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: right; direction: rtl; }</value>
+  </data>
+  <data name="PhoneNumber.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Arial'; font-size: 12pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: right; direction: rtl; }</value>
+  </data>
+  <data name="StudentPhoneNumber.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAQQAAAApCAYAAADTTVdWAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACrSURBVHhe7dRRCQMxAETB+FeVIzIqowJaAuHBacgM7M8K
+        eAPgZa31mXP+zOzO7QacHIyxD+BeuwEnB4IAtxMEIIIARBCACAIQQQAiCEAEAYggABEEIIIARBCACAIQ
+        QQAiCEAEAYggABEEIIIARBCACAIQQQAiCEAEAYggABEEIIIARBCACAIQQQAiCEAEAYggABEEIIIARBCA
+        vILwPM93H2Z253YDTg4AtjH+Bevv8eFYVLAAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="lblCalculatedAge.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Arial'; font-size: 12pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: right; direction: rtl; }</value>
   </data>
 </root>
