اضافة ادارة الحضور والغياب

--- a/markez_ahl_alquran/markez_ahl_alquran/PL/MainForm.resx
+++ b/markez_ahl_alquran/markez_ahl_alquran/PL/MainForm.resx
@@ -120,54 +120,85 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAYwAAALaCAYAAAAiBmQ9AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAqnSURBVHhe7dhRSsQAEETBvf959n6KYASRgdd+V0FIJhd4
-        0C8AmLzf74/n/Txut9vtdn99//jzAwC+aQQAO/UA4PKrEYIBwEUwAEg0AoCdegBwMUkBkAgGAIlGALBT
-        DwAuJikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA
-        4GKSAiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAu
-        JikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA4GKS
-        AiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAuJikA
-        EsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA4GKSAiAR
-        DAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAuJikAEsEA
-        INEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA4GKSAiARDAAS
-        jQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAuJikAEsEAINEI
-        AHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA4GKSAiARDAASjQBg
-        px4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAuJikAEsEAINEIAHbq
-        AcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA4GKSAiARDAASjQBgpx4A
-        XExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAuJikAEsEAINEIAHbqAcDF
-        JAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA4GKSAiARDAASjQBgpx4AXExS
-        ACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAuJikAEsEAINEIAHbqAcDFJAVA
-        IhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA4GKSAiARDAASjQBgpx4AXExSACSC
-        AUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAuJikAEsEAINEIAHbqAcDFJAVAIhgA
-        JBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA4GKSAiARDAASjQBgpx4AXExSACSCAUCi
-        EQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAuJikAEsEAINEIAHbqAcDFJAVAIhgAJBoB
-        wE49ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA4GKSAiARDAASjQBgpx4AXExSACSCAUCiEQDs
-        1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAuJikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49
-        ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA4GKSAiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOA
-        i0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAuJikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiY
-        pABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA4GKSAiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kK
-        gEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAuJikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABI
-        BAOARCMA2KkHABeTFACJYACQaAQAO/UA4GKSAiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQw
-        AEg0AoCdegBwMUkBkAgGAIlGALBTDwAuJikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOA
-        RCMA2KkHABeTFACJYACQaAQAO/UA4GKSAiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0
-        AoCdegBwMUkBkAgGAIlGALBTDwAuJikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA
-        2KkHABeTFACJYACQaAQAO/UA4GKSAiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCd
-        egBwMUkBkAgGAIlGALBTDwAuJikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkH
-        ABeTFACJYACQaAQAO/UA4GKSAiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBw
-        MUkBkAgGAIlGALBTDwAuJikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeT
-        FACJYACQaAQAO/UA4GKSAiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkB
-        kAgGAIlGALBTDwAuJikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJ
-        YACQaAQAO/UA4GKSAiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgG
-        AIlGALBTDwAuJikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJYACQ
-        aAQAO/UA4GKSAiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlG
-        ALBTDwAuJikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQA
-        O/UA4GKSAiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBT
-        DwAuJikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA
-        4GKSAiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAu
-        JikAEsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARCMA2KkHABeTFACJYACQaAQAO/UA4GKS
-        AiARDAASjQBgpx4AXExSACSCAUCiEQDs1AOAi0kKgEQwAEg0AoCdegBwMUkBkAgGAIlGALBTDwAuJikA
-        EsEAINEIAHbqAcDFJAVAIhgAJBoBwE49ALiYpABIBAOARDAA+L+vcDyP2+12u93PDQDR6/UJf9FZDE/J
-        K0oAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAzQAAALaCAYAAADnSxYxAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAA/uSURBVHhe7drRCYMAFARB+6/H/hL8MCBpwD1mQPTZwcId
+        AAAAeed5fu73/bjdbrfb7Xa73W73G+/r++fvBwAAwItpGAAAYIO6AQAASh4NI2gAAIASQQMAAGRpGAAA
+        YIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMA
+        AGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4A
+        AIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oB
+        AABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkY
+        AABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxB
+        AwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpM
+        zgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCD
+        ugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABk
+        aRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACA
+        LEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAA
+        SkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAA
+        YIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMA
+        AGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4A
+        AIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oB
+        AABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkY
+        AABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxB
+        AwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpM
+        zgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCD
+        ugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABk
+        aRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACA
+        LEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAA
+        SkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAA
+        YIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMA
+        AGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4A
+        AIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oB
+        AABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkY
+        AABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxB
+        AwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpM
+        zgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCD
+        ugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABk
+        aRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACA
+        LEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAA
+        SkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAA
+        YIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMA
+        AGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4A
+        AIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oB
+        AABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkY
+        AABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxB
+        AwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpM
+        zgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCD
+        ugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABk
+        aRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACA
+        LEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAA
+        SkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAA
+        YIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMA
+        AGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4A
+        AIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oB
+        AABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkY
+        AABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxB
+        AwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpM
+        zgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCD
+        ugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABk
+        aRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACA
+        LEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAA
+        SkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAA
+        YIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMA
+        AGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4A
+        AIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oB
+        AABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkY
+        AABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxB
+        AwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpM
+        zgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCD
+        ugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABk
+        aRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACA
+        LEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAA
+        SkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGQJGgAA
+        YMsVNvfjdrvdbrfb7Xa73W++AQAAwo7jC8DeEJgfQ0atAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnStudentPresentManagment.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAJYAAAAnCAYAAADtl7EyAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACRSURBVHhe7dKxAUBAAMBAk/zK7GcM/WMAFdJdcVXaLGOb
+        +9jOE/4z93uspwDfGIuEsUgYi4SxSBiLhLFIGIuEsUgYi4SxSBiLhLFIGIuEsUgYi4SxSBiLhLFIGIuE
+        sUgYi4SxSBiLhLFIGIuEsUgYi4SxSBiLhLFIGIuEsUgYi4SxSBiLhLFILGOdx1OA19Z5XLF9Eabs0yP2
+        AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnStudentProgressEntry.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
