--- a/markez_ahl_alquran/markez_ahl_alquran/PL/MainForm.resx
+++ b/markez_ahl_alquran/markez_ahl_alquran/PL/MainForm.resx
@@ -120,76 +120,49 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAzQAAALaCAYAAADnSxYxAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAA/uSURBVHhe7drRCYMAFARB+6/H/hL8MCBpwD1mQPTZwcId
-        AAAAeed5fu73/bjdbrfb7Xa73W73G+/r++fvBwAAwItpGAAAYIO6AQAASh4NI2gAAIASQQMAAGRpGAAA
-        YIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMA
-        AGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4A
-        AIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oB
-        AABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkY
-        AABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxB
-        AwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpM
-        zgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCD
-        ugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABk
-        aRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACA
-        LEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAA
-        SkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAA
-        YIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMA
-        AGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4A
-        AIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oB
-        AABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkY
-        AABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxB
-        AwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpM
-        zgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCD
-        ugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABk
-        aRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACA
-        LEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAA
-        SkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAA
-        YIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMA
-        AGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4A
-        AIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oB
-        AABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkY
-        AABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxB
-        AwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpM
-        zgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCD
-        ugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABk
-        aRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACA
-        LEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAA
-        SkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAA
-        YIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMA
-        AGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4A
-        AIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oB
-        AABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkY
-        AABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxB
-        AwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpM
-        zgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCD
-        ugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABk
-        aRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACA
-        LEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAA
-        SkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAA
-        YIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMA
-        AGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4A
-        AIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oB
-        AABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkY
-        AABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxB
-        AwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpM
-        zgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCD
-        ugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABk
-        aRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACA
-        LEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAA
-        SkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAA
-        YIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMA
-        AGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4A
-        AIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oB
-        AABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkY
-        AABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxB
-        AwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCDugEAAEpM
-        zgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABkaRgAAGCD
-        ugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACALEEDAABk
-        aRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAASkzOAACA
-        LEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGRpGAAAYIO6AQAA
-        SkzOAACALEEDAABkaRgAAGCDugEAAEpMzgAAgCxBAwAAZGkYAABgg7oBAABKTM4AAIAsQQMAAGQJGgAA
-        YMsVNvfjdrvdbrfb7Xa73W++AQAAwo7jC8DeEJgfQ0atAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAANcAAAMaCAYAAAAV49NCAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAlxSURBVHhe7dUxagMBEARB/f89+p+NgwuMcSCY3qgKxGnv
+        4mZeQOz9fn89z+fndrs/u//49wPwMT1B5FdcSoOIuGDHckFETxCxXHBBXLBjuSCiJ4hYLrggLtixXBDR
+        E0QsF1wQF+xYLojoCSKWCy6IC3YsF0T0BBHLBRfEBTuWCyJ6gojlggvigh3LBRE9QcRywQVxwY7lgoie
+        IGK54IK4YMdyQURPELFccEFcsGO5IKIniFguuCAu2LFcENETRCwXXBAX7FguiOgJIpYLLogLdiwXRPQE
+        EcsFF8QFO5YLInqCiOWCC+KCHcsFET1BxHLBBXHBjuWCiJ4gYrnggrhgx3JBRE8QsVxwQVywY7kgoieI
+        WC64IC7YsVwQ0RNELBdcEBfsWC6I6AkilgsuiAt2LBdE9AQRywUXxAU7lgsieoKI5YIL4oIdywURPUHE
+        csEFccGO5YKIniBiueCCuGDHckFETxCxXHBBXLBjuSCiJ4hYLrggLtixXBDRE0QsF1wQF+xYLojoCSKW
+        Cy6IC3YsF0T0BBHLBRfEBTuWCyJ6gojlggvigh3LBRE9QcRywQVxwY7lgoieIGK54IK4YMdyQURPELFc
+        cEFcsGO5IKIniFguuCAu2LFcENETRCwXXBAX7FguiOgJIpYLLogLdiwXRPQEEcsFF8QFO5YLInqCiOWC
+        C+KCHcsFET1BxHLBBXHBjuWCiJ4gYrnggrhgx3JBRE8QsVxwQVywY7kgoieIWC64IC7YsVwQ0RNELBdc
+        EBfsWC6I6AkilgsuiAt2LBdE9AQRywUXxAU7lgsieoKI5YIL4oIdywURPUHEcsEFccGO5YKIniBiueCC
+        uGDHckFETxCxXHBBXLBjuSCiJ4hYLrggLtixXBDRE0QsF1wQF+xYLojoCSKWCy6IC3YsF0T0BBHLBRfE
+        BTuWCyJ6gojlggvigh3LBRE9QcRywQVxwY7lgoieIGK54IK4YMdyQURPELFccEFcsGO5IKIniFguuCAu
+        2LFcENETRCwXXBAX7FguiOgJIpYLLogLdiwXRPQEEcsFF8QFO5YLInqCiOWCC+KCHcsFET1BxHLBBXHB
+        juWCiJ4gYrnggrhgx3JBRE8QsVxwQVywY7kgoieIWC64IC7YsVwQ0RNELBdcEBfsWC6I6AkilgsuiAt2
+        LBdE9AQRywUXxAU7lgsieoKI5YIL4oIdywURPUHEcsEFccGO5YKIniBiueCCuGDHckFETxCxXHBBXLBj
+        uSCiJ4hYLrggLtixXBDRE0QsF1wQF+xYLojoCSKWCy6IC3YsF0T0BBHLBRfEBTuWCyJ6gojlggvigh3L
+        BRE9QcRywQVxwY7lgoieIGK54IK4YMdyQURPELFccEFcsGO5IKIniFguuCAu2LFcENETRCwXXBAX7Fgu
+        iOgJIpYLLogLdiwXRPQEEcsFF8QFO5YLInqCiOWCC+KCHcsFET1BxHLBBXHBjuWCiJ4gYrnggrhgx3JB
+        RE8QsVxwQVywY7kgoieIWC64IC7YsVwQ0RNELBdcEBfsWC6I6AkilgsuiAt2LBdE9AQRywUXxAU7lgsi
+        eoKI5YIL4oIdywURPUHEcsEFccGO5YKIniBiueCCuGDHckFETxCxXHBBXLBjuSCiJ4hYLrggLtixXBDR
+        E0QsF1wQF+xYLojoCSKWCy6IC3YsF0T0BBHLBRfEBTuWCyJ6gojlggvigh3LBRE9QcRywQVxwY7lgoie
+        IGK54IK4YMdyQURPELFccEFcsGO5IKIniFguuCAu2LFcENETRCwXXBAX7FguiOgJIpYLLogLdiwXRPQE
+        EcsFF8QFO5YLInqCiOWCC+KCHcsFET1BxHLBBXHBjuWCiJ4gYrnggrhgx3JBRE8QsVxwQVywY7kgoieI
+        WC64IC7YsVwQ0RNELBdcEBfsWC6I6AkilgsuiAt2LBdE9AQRywUXxAU7lgsieoKI5YIL4oIdywURPUHE
+        csEFccGO5YKIniBiueCCuGDHckFETxCxXHBBXLBjuSCiJ4hYLrggLtixXBDRE0QsF1wQF+xYLojoCSKW
+        Cy6IC3YsF0T0BBHLBRfEBTuWCyJ6gojlggvigh3LBRE9QcRywQVxwY7lgoieIGK54IK4YMdyQURPELFc
+        cEFcsGO5IKIniFguuCAu2LFcENETRCwXXBAX7FguiOgJIpYLLogLdiwXRPQEEcsFF8QFO5YLInqCiOWC
+        C+KCHcsFET1BxHLBBXHBjuWCiJ4gYrnggrhgx3JBRE8QsVxwQVywY7kgoieIWC64IC7YsVwQ0RNELBdc
+        EBfsWC6I6AkilgsuiAt2LBdE9AQRywUXxAU7lgsieoKI5YIL4oIdywURPUHEcsEFccGO5YKIniBiueCC
+        uGDHckFETxCxXHBBXLBjuSCiJ4hYLrggLtixXBDRE0QsF1wQF+xYLojoCSKWCy6IC3YsF0T0BBHLBRfE
+        BTuWCyJ6gojlggvigh3LBRE9QcRywQVxwY7lgoieIGK54IK4YMdyQURPELFccEFcsGO5IKIniFguuCAu
+        2LFcENETRCwXXBAX7FguiOgJIpYLLogLdiwXRPQEEcsFF8QFO5YLInqCiOWCC+KCHcsFET1BxHLBBXHB
+        juWCiJ4gYrnggrhgx3JBRE8QsVxwQVywY7kgoieIWC64IC7YsVwQ0RNELBdcEBfsWC6I6AkilgsuiAt2
+        LBdE9AQRywUXxAU7lgsieoKI5YIL4oIdywURPUHEcsEFccGO5YKIniBiueCCuGDHckFETxCxXHBBXLBj
+        uSCiJ4hYLrggLtixXBDRE0QsF1wQF+xYLojoCSKWCy6IC3YsF0T0BBHLBRfEBTuWCyJ6gojlggvigh3L
+        BRE9QcRywQVxwY7lgoieIGK54IK4YMdyQURPELFccEFcsGO5IKIniFguuCAu2LFcENETRCwXXBAX7Fgu
+        iOgJIpYLLogLdiwXRPQEEcsFF8QFO5YLInqCiOWCC+KCHcsFET1BxHLBBXHBjuWCiJ4gYrnggrhgx3JB
+        RE8QsVxwQVywY7kgoieIWC64IC7YsVwQ0RNELBdcEBfsWC6I6AkilgsuiAt2LBdE9AQRywUXxAU7lgsi
+        eoKI5YIL4oIdywURPUHEcsEFccGO5YKIniBiueCCuGDHckFETxCxXHBBXLBjuSCiJ4hYLrggLtixXBDR
+        E0QsF1wQF+xYLojoCSKWCy6IC3YsF0T0BJE/cf28eF4+/91u9+c3kHq9vgEYbTNDZ+WtCAAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <data name="btnStudentPresentManagment.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
