--- a/markez_ahl_alquran/markez_ahl_alquran/PL/StudentMonthlyReport.resx
+++ b/markez_ahl_alquran/markez_ahl_alquran/PL/StudentMonthlyReport.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="TeacherName.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="txtYear.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAQQAAAApCAYAAADTTVdWAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACrSURBVHhe7dRRCQMxAETB+FeVIzIqowJaAuHBacgM7M8K
@@ -127,49 +127,69 @@
         vILwPM93H2Z253YDTg4AtjH+Bevv8eFYVLAAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnAdd.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGEAAAAnCAYAAAAfBybSAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACISURBVGhD7dGhAYAwAMAwLtnL8B9n4Dc4AA0VEVGV3cYx
-        z3GsxV/m+Ux4C3zJhAATAkwIMCHAhAATAkwIMCHAhAATAkwIMCHAhAATAkwIMCHAhAATAkwIMCHAhAAT
-        AkwIMCHAhAATAkwIMCHAhAATAkwIMCHAhAATAkwIMCFgG/u83gIf2ed1Awp/fZj9Ch4ZAAAAAElFTkSu
-        QmCC
+        iVBORw0KGgoAAAANSUhEUgAAAekAAAKkCAYAAAAk4Me4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAmUSURBVHhe7dcxCoMAFERB738e75eQwiJIim3MK2ZA8OsB
+        HnsAAHHneb6ux+12u91u93/um58/AIDHfXVZpAGgQ6QBAABgYUkDQJRIA0CUSAMAAMDCkgaAKJEGgCiR
+        BgAAgIUlDQBRIg0AUSINAAAAC0saAKJEGgCiRBoAAAAWljQARIk0AESJNAAAACwsaQCIEmkAiBJpAAAA
+        WFjSABAl0gAQJdIAAACwsKQBIEqkASBKpAEAAGBhSQNAlEgDQJRIAwAAwMKSBoAokQaAKJEGAACAhSUN
+        AFEiDQBRIg0AAAALSxoAokQaAKJEGgAAABaWNABEiTQARIk0AAAALCxpAIgSaQCIEmkAAABYWNIAECXS
+        ABAl0gAAALCwpAEgSqQBIEqkAQAAYGFJA0CUSANAlEgDAADAwpIGgCiRBoAokQYAAICFJQ0AUSINAFEi
+        DQAAAAtLGgCiRBoAokQaAAAAFpY0AESJNABEiTQAAAAsLGkAiBJpAIgSaQAAAFhY0gAQJdIAECXSAAAA
+        sLCkASBKpAEgSqQBAABgYUkDQJRIA0CUSAMAAMDCkgaAKJEGgCiRBgAAgIUlDQBRIg0AUSINAAAAC0sa
+        AKJEGgCiRBoAAAAWljQARIk0AESJNAAAACwsaQCIEmkAiBJpAAAAWFjSABAl0gAQJdIAAACwsKQBIEqk
+        ASBKpAEAAGBhSQNAlEgDQJRIAwAAwMKSBoAokQaAKJEGAACAhSUNAFEiDQBRIg0AAAALSxoAokQaAKJE
+        GgAAABaWNABEiTQARIk0AAAALCxpAIgSaQCIEmkAAABYWNIAECXSABAl0gAAALCwpAEgSqQBIEqkAQAA
+        YGFJA0CUSANAlEgDAADAwpIGgCiRBoAokQYAAICFJQ0AUSINAFEiDQAAAAtLGgCiRBoAokQaAAAAFpY0
+        AESJNABEiTQAAAAsLGkAiBJpAIgSaQAAAFhY0gAQJdIAECXSAAAAsLCkASBKpAEgSqQBAABgYUkDQJRI
+        A0CUSAMAAMDCkgaAKJEGgCiRBgAAgIUlDQBRIg0AUSINAAAAC0saAKJEGgCiRBoAAAAWljQARIk0AESJ
+        NAAAACwsaQCIEmkAiBJpAAAAWFjSABAl0gAQJdIAAACwsKQBIEqkASBKpAEAAGBhSQNAlEgDQJRIAwAA
+        wMKSBoAokQaAKJEGAACAhSUNAFEiDQBRIg0AAAALSxoAokQaAKJEGgAAABaWNABEiTQARIk0AAAALCxp
+        AIgSaQCIEmkAAABYWNIAECXSABAl0gAAALCwpAEgSqQBIEqkAQAAYGFJA0CUSANAlEgDAADAwpIGgCiR
+        BoAokQYAAICFJQ0AUSINAFEiDQAAAAtLGgCiRBoAokQaAAAAFpY0AESJNABEiTQAAAAsLGkAiBJpAIgS
+        aQAAAFhY0gAQJdIAECXSAAAAsLCkASBKpAEgSqQBAABgYUkDQJRIA0CUSAMAAMDCkgaAKJEGgCiRBgAA
+        gIUlDQBRIg0AUSINAAAAC0saAKJEGgCiRBoAAAAWljQARIk0AESJNAAAACwsaQCIEmkAiBJpAAAAWFjS
+        ABAl0gAQJdIAAACwsKQBIEqkASBKpAEAAGBhSQNAlEgDQJRIAwAAwMKSBoAokQaAKJEGAACAhSUNAFEi
+        DQBRIg0AAAALSxoAokQaAKJEGgAAABaWNABEiTQARIk0AAAALCxpAIgSaQCIEmkAAABYWNIAECXSABAl
+        0gAAALCwpAEgSqQBIEqkAQAAYGFJA0CUSANAlEgDAADAwpIGgCiRBoAokQYAAICFJQ0AUSINAFEiDQAA
+        AAtLGgCiRBoAokQaAAAAFpY0AESJNABEiTQAAAAsLGkAiBJpAIgSaQAAAFhY0gAQJdIAECXSAAAAsLCk
+        ASBKpAEgSqQBAABgYUkDQJRIA0CUSAMAAMDCkgaAKJEGgCiRBgAAgIUlDQBRIg0AUSINAAAAC0saAKJE
+        GgCiRBoAAAAWljQARIk0AESJNAAAACwsaQCIEmkAiBJpAAAAWFjSABAl0gAQJdIAAACwsKQBIEqkASBK
+        pAEAAGBhSQNAlEgDQJRIAwAAwMKSBoAokQaAKJEGAACAhSUNAFEiDQBRIg0AAAALSxoAokQaAKJEGgAA
+        ABaWNABEiTQARIk0AAAALCxpAIgSaQCIEmkAAABYWNIAECXSABAl0gAAALCwpAEgSqQBIEqkAQAAYGFJ
+        A0CUSANAlEgDAADAwpIGgCiRBoAokQYAAICFJQ0AUSINAFEiDQAAAAtLGgCiRBoAokQaAAAAFpY0AESJ
+        NABEiTQAAAAsLGkAiBJpAIgSaQAAAFhY0gAQJdIAECXSAAAAsLCkASBKpAEgSqQBAABgYUkDQJRIA0CU
+        SAMAAMDCkgaAKJEGgCiRBgAAgIUlDQBRIg0AUSINAAAAC0saAKJEGgCiRBoAAAAWljQARIk0AESJNAAA
+        ACwsaQCIEmkAiBJpAAAAWFjSABAl0gAQJdIAAACwsKQBIEqkASBKpAEAAGBhSQNAlEgDQJRIAwAAwMKS
+        BoAokQaAKJEGAACAhSUNAFEiDQBRIg0AAAALSxoAokQaAKJEGgAAABaWNABEiTQARIk0AAAALCxpAIgS
+        aQCIEmkAAABYWNIAECXSABAl0gAAALCwpAEgSqQBIEqkAQAAYGFJA0CUSANAlEgDAADAwpIGgCiRBoAo
+        kQYAAICFJQ0AUSINAFEiDQAAAAtLGgCiRBoAokQaAAAAFpY0AESJNABEiTQAAAAsLGkAiBJpAIgSaQAA
+        AFhY0gAQJdIAECXSAAAAsLCkASBKpAEgSqQBAABgYUkDQJRIA0CUSAMAAMDCkgaAKJEGgCiRBgAAgIUl
+        DQBRIg0AUSINAAAAC0saAKJEGgCiRBoAAAAWljQARIk0AESJNAAAACwsaQCIEmkAiBJpAAAAWFjSABAl
+        0gAQJdIAAACwsKQBIEqkASBKpAEAAGBhSQNAlEgDQJRIAwAAwMKSBoAokQaAKJEGAACAhSUNAFEiDQBR
+        Ig0AAAALSxoAokQaAKJEGgAAABaWNABEiTQARIk0AAAALCxpAIgSaQCIEmkAAABYWNIAECXSABAl0gAA
+        ALCwpAEgSqQBIEqkAQAAYGFJA0CUSANAlEgDAADAwpIGgCiRBoAokQYAAICFJQ0AUSINAFEiDQAAAAtL
+        GgCiRBoAokQaAAAAFpY0AESJNABEiTQAAAAsLGkAiBJpAIgSaQAAAFhY0gAQJdIAECXSAAAAsLiN58+H
+        6+P17na73W63+/n78w4AZB3HGxB3DTkZq4T6AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnCancel.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGEAAAAnCAYAAAAfBybSAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACISURBVGhD7dGhAYAwAMAwLtnL8B9n4Dc4AA0VEVGV3cYx
-        z3GsxV/m+Ux4C3zJhAATAkwIMCHAhAATAkwIMCHAhAATAkwIMCHAhAATAkwIMCHAhAATAkwIMCHAhAAT
-        AkwIMCHAhAATAkwIMCHAhAATAkwIMCHAhAATAkwIMCFgG/u83gIf2ed1Awp/fZj9Ch4ZAAAAAElFTkSu
+        iVBORw0KGgoAAAANSUhEUgAAAHUAAAAnCAYAAAAxQgdAAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACISURBVHhe7dExEYAwAMDAKqll8FcZ7AUEYIDcDz9lzJjn
+        XvO8byr2eqd+Bf7M1CBTg0wNMjXI1CBTg0wNMjXI1CBTg0wNMjXI1CBTg0wNMjXI1CBTg0wNMjXI1CBT
+        g0wNMjXI1CBTg0wNMjXI1CBTg0wNMjXI1CBTg0wNMjVozGNfX4GfOvb1ADHWoiBT50ZrAAAAAElFTkSu
         QmCC
 </value>
   </data>
-  <data name="TeacherPhoneNumber.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnShowReport.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAQQAAAApCAYAAADTTVdWAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACrSURBVHhe7dRRCQMxAETB+FeVIzIqowJaAuHBacgM7M8K
-        eAPgZa31mXP+zOzO7QacHIyxD+BeuwEnB4IAtxMEIIIARBCACAIQQQAiCEAEAYggABEEIIIARBCACAIQ
-        QQAiCEAEAYggABEEIIIARBCACAIQQQAiCEAEAYggABEEIIIARBCACAIQQQAiCEAEAYggABEEIIIARBCA
-        vILwPM93H2Z253YDTg4AtjH+Bevv8eFYVLAAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="bntDelete.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGEAAAAnCAYAAAAfBybSAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACISURBVGhD7dGhAYAwAMAwLtnL8B9n4Dc4AA0VEVGV3cYx
-        z3GsxV/m+Ux4C3zJhAATAkwIMCHAhAATAkwIMCHAhAATAkwIMCHAhAATAkwIMCHAhAATAkwIMCHAhAAT
-        AkwIMCHAhAATAkwIMCHAhAATAkwIMCHAhAATAkwIMCFgG/u83gIf2ed1Awp/fZj9Ch4ZAAAAAElFTkSu
+        iVBORw0KGgoAAAANSUhEUgAAAHUAAAAnCAYAAAAxQgdAAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACISURBVHhe7dExEYAwAMDAKqll8FcZ7AUEYIDcDz9lzJjn
+        XvO8byr2eqd+Bf7M1CBTg0wNMjXI1CBTg0wNMjXI1CBTg0wNMjXI1CBTg0wNMjXI1CBTg0wNMjXI1CBT
+        g0wNMjXI1CBTg0wNMjXI1CBTg0wNMjXI1CBTg0wNMjVozGNfX4GfOvb1ADHWoiBT50ZrAAAAAElFTkSu
         QmCC
-</value>
-  </data>
-  <data name="Salary.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAQQAAAApCAYAAADTTVdWAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACrSURBVHhe7dRRCQMxAETB+FeVIzIqowJaAuHBacgM7M8K
-        eAPgZa31mXP+zOzO7QacHIyxD+BeuwEnB4IAtxMEIIIARBCACAIQQQAiCEAEAYggABEEIIIARBCACAIQ
-        QQAiCEAEAYggABEEIIIARBCACAIQQQAiCEAEAYggABEEIIIARBCACAIQQQAiCEAEAYggABEEIIIARBCA
-        vILwPM93H2Z253YDTg4AtjH+Bevv8eFYVLAAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
