--- a/markez_ahl_alquran/markez_ahl_alquran/PL/Classes.resx
+++ b/markez_ahl_alquran/markez_ahl_alquran/PL/Classes.resx
@@ -118,6 +118,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnCancel.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFIAAAAnCAYAAACcwx/pAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACESURBVGhD7dChEYAwAMBAJunKsB9j4FsYAMMR+eJVXLZx
+        zHMca/HHPJ+Rb4GvjIwYGTEyYmTEyIiRESMjRkaMjBgZMTJiZMTIiJERIyNGRoyMGBkxMmJkxMiIkREj
+        I0ZGjIwYGTEyYmTEyIiRESMjRkaMjBgZMTJiZGQb+7zeAh/s87oBa9JiMvMFrMUAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="btnDelete.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFIAAAAnCAYAAACcwx/pAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
